[package]
name = "accurate-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.20", features = ["unstable-locales"] }
clap = { version = "3.2.16", features = ["derive"] }
num_cpus = "1.13.1"
pure-rust-locales = "0.5.6"
